# http_alma_analytics

./: .funcignore  .gitignore  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: azure-functions-app-python.yml
